--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -1,8 +1,7 @@
 name: Exploring Variables and Secrets
 
 on: 
-    schedule:
-      - cron: "*/1 * * * *"
+    workflow_dispatch: 
 
 env: 
     CONTAINER_REGISTRY: docker.io
@@ -24,6 +23,9 @@ jobs:
 
     deploy:
         needs: docker
+        concurrency:
+          group: production-deployment
+          cancel-in-progress: true
         runs-on: ubuntu-latest
         steps: 
         - name: Docker Run 
