--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -29,4 +29,7 @@ jobs:
         runs-on: ubuntu-latest
         steps: 
         - name: Docker Run 
-          run: docker run -d -p 8080:80 $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
+          timeout-minutes: 1
+          run: |
+           echo docker run -d -p 8080:80 $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
+           sleep 1000s
